nonPH_analysis/CCA/logs/archives/stbl_cca576730.err
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/src_py/run_lindecomp_stbl.py", line 2, in <module>
    import lindecomp_stability as ld_st
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/lindecomp_stability.py", line 198
    ext = "." decomp_method + "_stbl"
                          ^
SyntaxError: invalid syntax
